Add Vercel Web Analytics

--- a/search-discovery.html
+++ b/search-discovery.html
@@ -16,73 +16,75 @@
   </style>
 </head>
 <body>
-  <h1>Why Every Retailer Needs an LTR (Learning to Rank) Model</h1>
-  <p class="meta">An overview of how Learning to Rank improves discovery, conversion, and revenue</p>
+    <h1>Why Every Retailer Needs an LTR (Learning to Rank) Model</h1>
+    <p class="meta">An overview of how Learning to Rank improves discovery, conversion, and revenue</p>
 
-  <p>In today’s retail environment, customer attention is the most valuable currency. Whether shoppers are browsing your website, using your app, or searching for products, what they see first determines what they buy.</p>
+    <p>In today’s retail environment, customer attention is the most valuable currency. Whether shoppers are browsing your website, using your app, or searching for products, what they see first determines what they buy.</p>
 
-  <p>That’s where Learning to Rank (LTR) comes in.</p>
+    <p>That’s where Learning to Rank (LTR) comes in.</p>
 
-  <p>An LTR model helps retailers intelligently order products, search results, and recommendations based on what customers are most likely to engage with or purchase. Instead of static sorting rules, LTR uses data to dynamically optimize ranking for revenue, relevance, and customer experience.</p>
+    <p>An LTR model helps retailers intelligently order products, search results, and recommendations based on what customers are most likely to engage with or purchase. Instead of static sorting rules, LTR uses data to dynamically optimize ranking for revenue, relevance, and customer experience.</p>
 
-  <h2>What is a Learning to Rank (LTR) Model?</h2>
-  <p>Learning to Rank is a machine learning approach used to automatically order items (such as products) based on predicted relevance to a user.</p>
-  <p>Instead of simple rules like:</p>
-  <ul>
-    <li>Sort by price (low to high)</li>
-    <li>Sort by popularity</li>
-    <li>Sort by newest arrivals</li>
-  </ul>
-  <p>LTR models learn from real customer behavior, including clicks, add-to-cart actions, purchases, time spent on product pages, and returns. The result is a smarter ranking system that adapts to customer intent.</p>
+    <h2>What is a Learning to Rank (LTR) Model?</h2>
+    <p>Learning to Rank is a machine learning approach used to automatically order items (such as products) based on predicted relevance to a user.</p>
+    <p>Instead of simple rules like:</p>
+    <ul>
+        <li>Sort by price (low to high)</li>
+        <li>Sort by popularity</li>
+        <li>Sort by newest arrivals</li>
+    </ul>
+    <p>LTR models learn from real customer behavior, including clicks, add-to-cart actions, purchases, time spent on product pages, and returns. The result is a smarter ranking system that adapts to customer intent.</p>
 
-  <h2>Why LTR is Critical for Retailers</h2>
-  <ul>
-    <li><strong>Improves Conversion Rates</strong> — When customers see relevant products first, they’re more likely to click and buy.</li>
-    <li><strong>Increases Average Order Value (AOV)</strong> — Rank higher-margin or complementary products strategically to influence basket size.</li>
-    <li><strong>Personalizes the Shopping Experience</strong> — Incorporate browsing history, purchase history, location, device type, time of day, and seasonality to create personalized rankings.</li>
-    <li><strong>Optimizes Revenue, Not Just Relevance</strong> — Balance relevance, inventory, margin, and promotions into a single optimized score.</li>
-  </ul>
+    <h2>Why LTR is Critical for Retailers</h2>
+    <ul>
+        <li><strong>Improves Conversion Rates</strong> — When customers see relevant products first, they’re more likely to click and buy.</li>
+        <li><strong>Increases Average Order Value (AOV)</strong> — Rank higher-margin or complementary products strategically to influence basket size.</li>
+        <li><strong>Personalizes the Shopping Experience</strong> — Incorporate browsing history, purchase history, location, device type, time of day, and seasonality to create personalized rankings.</li>
+        <li><strong>Optimizes Revenue, Not Just Relevance</strong> — Balance relevance, inventory, margin, and promotions into a single optimized score.</li>
+    </ul>
 
-  <h2>Where Retailers Can Use LTR</h2>
-  <p>LTR is not just for search. It can improve ranking across multiple touchpoints:</p>
-  <ul>
-    <li>On-site search results</li>
-    <li>Category page product listings</li>
-    <li>Recommendation carousels</li>
-    <li>Email product suggestions</li>
-    <li>Push notification product ordering</li>
-    <li>Marketplace seller ranking</li>
-  </ul>
+    <h2>Where Retailers Can Use LTR</h2>
+    <p>LTR is not just for search. It can improve ranking across multiple touchpoints:</p>
+    <ul>
+        <li>On-site search results</li>
+        <li>Category page product listings</li>
+        <li>Recommendation carousels</li>
+        <li>Email product suggestions</li>
+        <li>Push notification product ordering</li>
+        <li>Marketplace seller ranking</li>
+    </ul>
 
-  <h2>How an LTR Model Works (Simplified)</h2>
-  <p>At a high level:</p>
-  <h3>Collect Data</h3>
-  <p>Gather historical interaction data (clicks, purchases, dwell time, etc.).</p>
+    <h2>How an LTR Model Works (Simplified)</h2>
+    <p>At a high level:</p>
+    <h3>Collect Data</h3>
+    <p>Gather historical interaction data (clicks, purchases, dwell time, etc.).</p>
 
-  <h3>Feature Engineering</h3>
-  <p>Create ranking features such as product popularity, user affinity, price sensitivity, inventory pressure, and promotion flags.</p>
+    <h3>Feature Engineering</h3>
+    <p>Create ranking features such as product popularity, user affinity, price sensitivity, inventory pressure, and promotion flags.</p>
 
-  <h3>Model Training</h3>
-  <p>Train a model using pointwise, pairwise, or listwise approaches to predict or optimize rankings.</p>
+    <h3>Model Training</h3>
+    <p>Train a model using pointwise, pairwise, or listwise approaches to predict or optimize rankings.</p>
 
-  <h3>Real-Time Scoring & Continuous Learning</h3>
-  <p>Score products in real time and keep the system learning from new interactions.</p>
+    <h3>Real-Time Scoring & Continuous Learning</h3>
+    <p>Score products in real time and keep the system learning from new interactions.</p>
 
-  <h2>Business Impact of LTR in Retail</h2>
-  <p>Retailers who implement LTR typically see higher search conversion rates, increased revenue per session, better inventory sell-through, improved customer satisfaction, and reduced bounce rate.</p>
+    <h2>Business Impact of LTR in Retail</h2>
+    <p>Retailers who implement LTR typically see higher search conversion rates, increased revenue per session, better inventory sell-through, improved customer satisfaction, and reduced bounce rate.</p>
 
-  <h2>Common Challenges (and How to Overcome Them)</h2>
-  <ul>
-    <li><strong>Cold Start</strong> — Use content-based features until behavioral data accumulates.</li>
-    <li><strong>Bias Toward Popular Products</strong> — Introduce exploration strategies to test new items.</li>
-    <li><strong>Over-Optimization for Clicks</strong> — Optimize for downstream events like purchase or margin.</li>
-  </ul>
+    <h2>Common Challenges (and How to Overcome Them)</h2>
+    <ul>
+        <li><strong>Cold Start</strong> — Use content-based features until behavioral data accumulates.</li>
+        <li><strong>Bias Toward Popular Products</strong> — Introduce exploration strategies to test new items.</li>
+        <li><strong>Over-Optimization for Clicks</strong> — Optimize for downstream events like purchase or margin.</li>
+    </ul>
 
-  <h2>Getting Started</h2>
-  <p>Start with clean behavioral data, clear ranking objectives, a test-and-learn framework (A/B testing), and a gradual rollout. Even a basic LTR implementation can outperform static sorting rules.</p>
+    <h2>Getting Started</h2>
+    <p>Start with clean behavioral data, clear ranking objectives, a test-and-learn framework (A/B testing), and a gradual rollout. Even a basic LTR implementation can outperform static sorting rules.</p>
 
-  <p><strong>Final Thoughts:</strong> Learning to Rank transforms ranking from a static merchandising task into a dynamic revenue engine. For retailers competing in a crowded digital landscape, LTR is a strategic advantage.</p>
+    <p><strong>Final Thoughts:</strong> Learning to Rank transforms ranking from a static merchandising task into a dynamic revenue engine. For retailers competing in a crowded digital landscape, LTR is a strategic advantage.</p>
 
-  <p class="back"><a href="Adtech & Search Products.html">← Back to resources</a></p>
+    <p class="back"><a href="Adtech & Search Products.html">← Back to resources</a></p>
+
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
